# gas_sensing

./: .dockerignore  .editorconfig  .gitignore  .mypy_advisory_latest.txt  .mypy_final.txt  .mypy_now.txt  .pre-commit-config.yaml  ANALYSIS_STATUS.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CODEMAP.md  CONTRIBUTING.md  COVER_LETTER.md  DEPLOY_RESEARCH_LAB.md  DEPRECATION_NOTICE.md  Dockerfile  IMPROVEMENT_SUMMARY.md  LICENSE  MANIFEST.in  MANUSCRIPT_DRAFT.md  MANUSCRIPT_PREPARATION_GUIDE.md  Makefile  NOTES  PIPELINE_GUIDE.md  PPT_CONTENT_PART1.md  PPT_CONTENT_PART2.md  PPT_CONTENT_PART3.md  PPT_CONTENT_PART4.md  PRESENTATION_WORKFLOW.md  PRODUCTION_READINESS.md  README.md  README_REPRODUCIBILITY.md  REMAINING_WORK.md  REPORT.md  RESEARCH_HANDBOOK.md  RESEARCH_PAPER_BLUEPRINT.md  REVIEWER_RESPONSE_TEMPLATE.md  SCIENTIFIC_VALIDATION_REPORT.md  (+52 more)
.claude/: settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml
Kevin_acetone_ppt/: README.md  README_PRESENTATION.md  RUNBOOK.md  core.py  ppt_generator.py  pyproject.toml
Kevin_acetone_ppt/config/: presentation_scientific.yaml
Kevin_acetone_ppt/data/: comparison_table.csv  multigas_results.csv  reference_metrics.csv  voc_protocol.csv
Kevin_acetone_ppt/generated_assets/exported/Acetone/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Acetone/metrics/: calibration_metrics.json
Kevin_acetone_ppt/generated_assets/exported/Acetone/reports/: summary.md
Kevin_acetone_ppt/generated_assets/exported/Acetone/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/Ethanol/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Ethanol/metrics/: absorbance_amplitude_calibration.json  calibration_metrics.json
Kevin_acetone_ppt/generated_assets/exported/Ethanol/reports/: summary.md
Kevin_acetone_ppt/generated_assets/exported/Ethanol/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/Isopropanol/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Isopropanol/metrics/: calibration_metrics.json
Kevin_acetone_ppt/generated_assets/exported/Isopropanol/publication_figures/: figures_summary.md
Kevin_acetone_ppt/generated_assets/exported/Isopropanol/reports/: summary.md
Kevin_acetone_ppt/generated_assets/exported/Isopropanol/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/Methanol/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Methanol/metrics/: calibration_metrics.json
Kevin_acetone_ppt/generated_assets/exported/Methanol/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/MixVOC/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/MixVOC/reports/: summary.md
Kevin_acetone_ppt/generated_assets/exported/MixVOC/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/Toluene/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Toluene/metrics/: absorbance_amplitude_calibration.json
Kevin_acetone_ppt/generated_assets/exported/Toluene/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/Xylene/: manifest.json
Kevin_acetone_ppt/generated_assets/exported/Xylene/metrics/: calibration_metrics.json
Kevin_acetone_ppt/generated_assets/exported/Xylene/reports/: summary.md
Kevin_acetone_ppt/generated_assets/exported/Xylene/text/: key_figures.json
Kevin_acetone_ppt/generated_assets/exported/publication_figures/: Figure4_performance_table.csv  figures_summary.md
Kevin_acetone_ppt/help_files/: MANUSCRIPT_DRAFT.md
Kevin_acetone_ppt/imp/: poised-graph-480705-v0-51ccd9f62df3.json
Kevin_acetone_ppt/scripts/: generate_diagrams.py
Kevin_acetone_ppt/slides_automation/: __init__.py  audit_pptx.py  cli.py  config.py  data_sources.py  docx_postprocess.py  google_slides.py  manuscript.py  orchestrator.py  pptx_generator.py  quality.py  utils.py
cUsersdeeppDesktopChula_WorkPRojectsMain_Research_Chulaspectraagentwebappfrontend/: index.html  package.json
config/: MODEL.yaml  agent_config.yaml  config.yaml  config_loader.py
contracts/: openapi_baseline.json
dashboard/: agentic_pipeline_tab.py  app.py  auth.py  backups.py  calibration_library.py  experiment_tab.py  health.py  live_server.py  predict_tab.py  project_store.py  report_generator.py  reproducibility.py  science_tab.py  security.py  sensor_dashboard.py  startup_validation.py
docs/: ENGINEERING_STANDARDS.md  ICH_Q2_VALIDATION.md  PAPER_METHODS_TEMPLATE.md  RESEARCHER_USER_GUIDE.md  RESEARCH_PLAN.md  SYSTEM_ARCHITECTURE.md  VALIDATION_STRATEGY.md  index.md
gas_analysis/: __init__.py  analyzer.py  data_loader.py  feature_extraction.py  logging_setup.py  visualization.py
gas_analysis_backup/: __init__.py  feature_extraction.py  visualization.py
installer/: .gitignore  README_installer.md  build_installer.bat  first_run_wizard.py  install_deps.bat  spectraagent_setup.iss
n8n/: workflow_gas_sensing.json
output/: README.md  comparative_analysis_report.json  data_validation_report.json  reproducibility_summary.json  theoretical_analysis_results.json
scripts/: __init__.py  build_industry_evaluation_bundle.py  build_research_evidence_pack.py  check_artifact_hygiene.py  check_junit_budget.py  check_openapi_compat.py  check_repo_hygiene.py  check_scope_compliance.py  check_status_sync.py  collect_ci_diagnostics.py  compare_sessions.py  cross_gas_selectivity.py  detect_flaky_tests.py  generate_benchmark_evidence.py  generate_blinded_replication_manifest.py  generate_checksums.py  generate_pr_comment.py  generate_presention_diagrams.py  generate_publication_figures.py  generate_qualification_artifacts.py  generate_selectivity_report.py  integration_smoke_check.py  multi_roi_analysis.py  phase5_replace_bodies.py  phase6_replace_bodies.py  phase7a_batch_aggregation.py  phase7b_extract_bodies.py  pipeline_cli.py  quality_gate.py  replay_session.py  rerun_acetone_paper_mode.py  research_integrity_gate.py  research_preflight.py  run_improved_pipeline.py  summarize_junit.py  train_realtime_models.py  update_openapi_baseline.py  (+3 more)
src/: __init__.py  (+2 more)
(+46243 files in other folders)
